--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
   <meta property="og:url" content="https://Kermit.vip">
   <meta property="og:site_name" content="Kermit">
   <meta property="og:description" content="Kermit">
-  <meta property="og:image" content="http://Kermit.vip/twitter_cover.jpg?refresh">
-  <meta property="og:image:secure_url" content="https://Kermit.vip/twitter_cover.jpg?refresh">
+
   <meta property="og:image:type" content="image/jpeg">
   <meta property="og:image:width" content="1280">
   <meta property="og:image:height" content="627">
   <meta property="twitter:description" content="Kermit">
-  <meta property="twitter:image" content="https://Kermit.vip/twitter_cover.jpg?refresh">
+
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:title" content="Kermit">
@@ -35,6 +34,13 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/media.css">
   <title>Kermit</title>
+  <style>
+    @media only screen and (min-width: 768px) {
+      .lampion {
+        margin-top: 40px;
+      }
+    }
+  </style>
 </head>
 
 <body>
@@ -54,8 +60,7 @@
 
       <div class="copy_address desktop">
         <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="200"> </p>
-        <span class="value" data-aos="fade-up" data-aos-duration="500"
-          data-aos-delay="200">0x2748ccb85b4d80364074a4279558d17b3cef3bf68612a4ac10c097bc9953524f::kermits::KERMITS</span>
+        <span class="value" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">TBA</span>
 
         <img src="fonts/clipboardBlack.svg" alt="copy" class="copy_btn" data-aos="fade-up" data-aos-duration="500"
           data-aos-delay="200">
@@ -64,8 +69,8 @@
 
       <div class="buttons hollow_btn">
         <div data-aos="fade-left" data-aos-duration="500" data-aos-delay="300">
-          <a href="https://movepump.com/token/0x2748ccb85b4d80364074a4279558d17b3cef3bf68612a4ac10c097bc9953524f::kermits::KERMITS"
-            target="_blank" class="btn small hollow" title="GET norT" rel="noreferrer">GET Kermit</a>
+          <a href="https://firstledger.net/" target="_blank" class="btn small hollow" title="GET norT"
+            rel="noreferrer">GET Kermit</a>
         </div>
       </div>
 
@@ -80,14 +85,13 @@
       <div class="links">
         <ul>
           <li class="copy_address">
-            <p><span
-                class="value">0x2748ccb85b4d80364074a4279558d17b3cef3bf68612a4ac10c097bc9953524f::kermits::KERMITS</span>
+            <p><span class="value">TBA</span>
             </p>
             <img src="fonts/clipboardBlack.svg" alt="copy">
             <aside class="message">COPIED</aside>
           </li>
-          <li><a href="https://t.me/KermitFrogSui_Portal" target="_blank"> Telegram </a></li>
-          <li><a href="https://x.com/KermitOnSui" target="_blank"> Twitter </a></li>
+          <li><a href="https://t.me/KermitXRPL_Portal" target="_blank"> Telegram </a></li>
+          <li><a href="https://x.com/XRPL_Kermit" target="_blank"> Twitter </a></li>
           <li><a href="#" target="_blank"> Kermitscan </a></li>
         </ul>
       </div>
@@ -109,19 +113,21 @@
           <div class="get_btn social_grup">
 
             <div class="socials" data-aos="fade-right" data-aos-duration="500" data-aos-delay="600">
-              <a class="circle" href="https://x.com/KermitOnSui" rel="noreferrer" title="Jomon Twitter"
-                target="_blank"><i data-ico="tw"></i></a><a class="circle" href="https://t.me/KermitFrogSui_Portal"
+              <a class="circle" href="https://x.com/XRPL_Kermit" rel="noreferrer" title="Jomon Twitter"
+                target="_blank"><i data-ico="tw"></i></a><a class="circle" href="https://t.me/KermitXRPL_Portal"
                 rel="noreferrer" title="Jomon Telegram" target="_blank"><i data-ico="tg"></i></a><a class="circle"
                 href="https://dexscreener.com/" rel="noreferrer" title="Jomon DexScreener" target="_blank"><i
                   data-ico="dexscreener"></i></a>
             </div>
           </div>
         </div>
-
+        <img loading="lazy" src="images/header.png" width="500" height="500" alt="background hero" class="bg_hero">
         <div class=" cnt-img hero_img" data-aos="fade-left" data-aos-duration="500" data-aos-delay="300">
+
           <figure class="photo hero_photo">
 
             <img loading="lazy" src="images/bg_hero.png" width="500" height="500" alt="background hero" class="bg_hero">
+
 
             <!-- <dotlottie-player src="https://lottie.host/a27fdb65-ebde-4c38-a30f-e02c69aa257e/ksEEWcUQUS.json" background="transparent" speed="1"  class="hero_img_char" loop autoplay></dotlottie-player>  -->
             <div class="div hero_img_char">
@@ -133,20 +139,29 @@
             </div>
 
             <!-- chart -->
-            <a class="chart_hero" target="_blank"
-              href="https://movepump.com/token/0x2748ccb85b4d80364074a4279558d17b3cef3bf68612a4ac10c097bc9953524f::kermits::KERMITS">
-              <div class="lampion">
+            <a class="chart_hero" target="_blank" href="https://dexscreener.com/">
+              <div class="lampion" style="    display: flex
+              ;
+                  flex-direction: column;
+                  justify-content: center;
+                  align-items: center;">
                 <img src="images/chart_hero.png" alt="chart hero main_image ">
+                <img style="width: 60px;" src="images/XRP 3D1.png" alt="chart hero main_image ">
               </div>
               <aside class="alert">
                 <div class="speech">CHECK THE CHART!</div>
               </aside>
             </a>
 
-            <a href="https://movepump.com/token/0x2748ccb85b4d80364074a4279558d17b3cef3bf68612a4ac10c097bc9953524f::kermits::KERMITS"
-              target="_blank" class="buy_hero ">
-              <div class="lampion" style="animation-delay: -5s;">
+            <a href="https://firstledger.net/" target="_blank" class="buy_hero ">
+              <div class="lampion" style="animation-delay: -5s;    display: flex
+              ;
+                  flex-direction: column;
+                  justify-content: center;
+                  align-items: center;">
                 <img src="images/buy_hero.png" alt="buy hero main_image ">
+                <img style="width: 60px;" src="images/XRP 3D1.png" alt="chart hero main_image ">
+
               </div>
               <aside class="alert">
                 <div class="speech">READY, SET... APE NOW CHAMP!</div>
@@ -302,7 +317,7 @@
 
           <div class="tokenomics__item desk_token" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="500">
             <div class="tokenomics__item-count">SUPPLY</div>
-            <div class="tokenomics__item-head supply_text">10.000.000.000</div>
+            <div class="tokenomics__item-head supply_text">100.000.000</div>
             <img src="images/token_itemBg.png" alt="token background">
           </div>
 
@@ -314,7 +329,7 @@
 
           <div class="tokenomics__item mobile_token" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="700">
             <div class="tokenomics__item-count">SUPPLY</div>
-            <div class="tokenomics__item-head supply_text">420,690,000,000,000</div>
+            <div class="tokenomics__item-head supply_text">100,000,000</div>
             <img src="images/token_itemBg.png" alt="token background">
           </div>
 
@@ -339,14 +354,14 @@
           <div class="btn-group social_grup align-center">
 
             <div class="link_contract " data-aos="zoom-in" data-aos-duration="500" data-aos-delay="200">
-              <a href="https://t.me/KermitFrogSui_Portal" class="btn primary large" title="Telegram" rel="noreferrer"
+              <a href="https://t.me/KermitXRPL_Portal" class="btn primary large" title="Telegram" rel="noreferrer"
                 target="_blank"><span class="btn-circ"><i data-ico="tg" data-theme="yellow"></i></span>
                 <p class="stroke_text">TELEGRAM</p>
               </a>
             </div>
 
             <div class="link_contract" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
-              <a href="https://x.com/KermitOnSui" class="btn secondary large" title="Twitter" rel="noreferrer"
+              <a href="https://x.com/XRPL_Kermit" class="btn secondary large" title="Twitter" rel="noreferrer"
                 target="_blank"><span class="btn-circ"><i data-ico="tw" data-theme="yellow"></i></span>
                 <p>TWITTER</p>
               </a>
@@ -359,11 +374,9 @@
           </div>
 
           <section class="contractCopy cell-8" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
-            <input class="value" type="text"
-              value="0x2748ccb85b4d80364074a4279558d17b3cef3bf68612a4ac10c097bc9953524f::kermits::KERMITS"
-              style="position: fixed; left: -9999px;">
+            <input class="value" type="text" value="TBA" style="position: fixed; left: -9999px;">
             <p class="clipboard stroke_text">
-              <span class="reduced">0TBA</span>
+              <span class="reduced">TBA</span>
               <i data-ico="clipboard"></i>
             </p>
           </section>
@@ -379,7 +392,7 @@
 
         <div class="container">
           <div class="social-sect__img">
-            <img style="border-radius: 10px;" src="images/Cover (32).png" alt="social image " class="socialImg">
+            <img style="border-radius: 10px;" src="images/tokenomics.png" alt="social image " class="socialImg">
 
             <!-- <dotlottie-player src="https://lottie.host/11473755-f190-4f3c-b37f-92196cc080b3/GDo6xtBXlu.json" background="transparent" class="lottie" speed="1"  loop autoplay></dotlottie-player> -->
 
@@ -391,9 +404,9 @@
       <div class="info">
         <p class="copy">
           <span>Kermit © 2024</span>
-          <a href="#" rel="nofollow">support@kermitonsui.fun</a>
+          <a href="#" rel="nofollow">support@kermitonxrp.xyz</a>
         </p>
-        <p class="contract">0x2748ccb85b4d80364074a4279558d17b3cef3bf68612a4ac10c097bc9953524f::kermits::KERMITS</p>
+        <p class="contract">TBA</p>
       </div>
 
 
