--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
       <div class="buttons hollow_btn">
         <div data-aos="fade-left" data-aos-duration="500" data-aos-delay="300">
-          <a href="https://firstledger.net/" target="_blank" class="btn small hollow" title="GET norT"
-            rel="noreferrer">GET Kermit</a>
+          <a href="https://firstledger.net/token/rUVsidSJqqetJEV9efF5WZNr92uvJ54RtR/4B65726D69740000000000000000000000000000"
+            target="_blank" class="btn small hollow" title="GET norT" rel="noreferrer">GET Kermit</a>
         </div>
       </div>
 
@@ -153,7 +153,8 @@
               </aside>
             </a>
 
-            <a href="https://firstledger.net/" target="_blank" class="buy_hero ">
+            <a href="https://firstledger.net/token/rUVsidSJqqetJEV9efF5WZNr92uvJ54RtR/4B65726D69740000000000000000000000000000"
+              target="_blank" class="buy_hero ">
               <div class="lampion" style="animation-delay: -5s;    display: flex
               ;
                   flex-direction: column;
