--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 
       <div class="copy_address desktop">
         <p data-aos="fade-up" data-aos-duration="500" data-aos-delay="200"> </p>
-        <span class="value" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">TBA</span>
+        <span class="value" data-aos="fade-up" data-aos-duration="500"
+          data-aos-delay="200">4B65726D69740000000000000000000000000000.rUVsidSJqqetJEV9efF5WZNr92uvJ54RtR</span>
 
         <img src="fonts/clipboardBlack.svg" alt="copy" class="copy_btn" data-aos="fade-up" data-aos-duration="500"
           data-aos-delay="200">
@@ -85,7 +86,7 @@
       <div class="links">
         <ul>
           <li class="copy_address">
-            <p><span class="value">TBA</span>
+            <p><span class="value">4B65726D69740000000000000000000000000000.rUVsidSJqqetJEV9efF5WZNr92uvJ54RtR</span>
             </p>
             <img src="fonts/clipboardBlack.svg" alt="copy">
             <aside class="message">COPIED</aside>
@@ -116,8 +117,8 @@
               <a class="circle" href="https://x.com/XRPL_Kermit" rel="noreferrer" title="Jomon Twitter"
                 target="_blank"><i data-ico="tw"></i></a><a class="circle" href="https://t.me/KermitXRPL_Portal"
                 rel="noreferrer" title="Jomon Telegram" target="_blank"><i data-ico="tg"></i></a><a class="circle"
-                href="https://dexscreener.com/" rel="noreferrer" title="Jomon DexScreener" target="_blank"><i
-                  data-ico="dexscreener"></i></a>
+                href="https://dexscreener.com/xrpl/4b65726d69740000000000000000000000000000.ruvsidsjqqetjev9eff5wznr92uvj54rtr_xrp"
+                rel="noreferrer" title="Jomon DexScreener" target="_blank"><i data-ico="dexscreener"></i></a>
             </div>
           </div>
         </div>
@@ -139,7 +140,8 @@
             </div>
 
             <!-- chart -->
-            <a class="chart_hero" target="_blank" href="https://dexscreener.com/">
+            <a class="chart_hero" target="_blank"
+              href="https://dexscreener.com/xrpl/4b65726d69740000000000000000000000000000.ruvsidsjqqetjev9eff5wznr92uvj54rtr_xrp">
               <div class="lampion" style="    display: flex
               ;
                   flex-direction: column;
@@ -375,9 +377,11 @@
           </div>
 
           <section class="contractCopy cell-8" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
-            <input class="value" type="text" value="TBA" style="position: fixed; left: -9999px;">
+            <input class="value" type="text"
+              value="4B65726D69740000000000000000000000000000.rUVsidSJqqetJEV9efF5WZNr92uvJ54RtR"
+              style="position: fixed; left: -9999px;">
             <p class="clipboard stroke_text">
-              <span class="reduced">TBA</span>
+              <span class="reduced">4B65726D69740000000000000000000000000000.rUVsidSJqqetJEV9efF5WZNr92uvJ54RtR</span>
               <i data-ico="clipboard"></i>
             </p>
           </section>
@@ -407,7 +411,7 @@
           <span>Kermit © 2024</span>
           <a href="#" rel="nofollow">support@kermitonxrp.xyz</a>
         </p>
-        <p class="contract">TBA</p>
+        <p class="contract">4B65726D69740000000000000000000000000000.rUVsidSJqqetJEV9efF5WZNr92uvJ54RtR</p>
       </div>
 
 
